# wlalat

./: .clang-format  CMakeLists.txt  Example.cc  ExampleCodeGenDriver.cc  GeneratedTests.hh  Parser.cc
cmake/: target_cxx_version.cmake
include/wlalat/: ArgsIterator.hh  ArrayParser.hh  Binary.hh  CodeGen.hh  CodeGenInfo.hh  CodeGenInfoFormat.hh  Error.hh  Message.hh  MessageHeader.hh  MessageParser.hh  MessageSerializer.hh  MessageViewFD.hh  Parser.hh  ProtocolParser.hh  StringParser.hh  Traits.hh  Types.hh  Writer.hh  XML.hh
include/wlalat/Unix/: ClosableFD.hh  Socket.hh  TypeTags.hh
include/wlalat/codegen/: CodeGen.hh  CodeGenInfo.hh  CodeGenInfoFormat.hh  Format.hh  LineList.hh  ProtocolParser.hh  Types.hh
protos/: CMakeLists.txt
